- distLextreme vs distLquantile output data.frame vs matrix
- move plotting positions note from package doc to dle doc
- replace all instances of dat with x?
- put dlf elements in common order
- distLfit(annMax, sel="gep") -> distLweights ->  Error in max(RMSE, na.rm = TRUE) : invalid 'type' (list) of argument 
- distLgof into distLfit? rename plotLgof to plotLweights?
- distLquantile: remove arguments that can be passed to distLfit


---------------------------------------
extremeStat Package by Berry Boessenkool, berry-b@gmx.de
Any feedback is welcome, per email or on github.com/brry/extremeStat
---------------------------------------


Version 1.. (2017-)
For complete log, see https://github.com/brry/extremeStat/commits/master
Package thoroughly cleaned up:
- gofProp option completely removed (POT support is very good now)
- order option now available throughout the package
- plot functions renamed to common syntax plotL*
- many more line breaks in source code for better readibility
- on.exit calls changed to immediate messages
Also:
- plotLgof rank option removed
- more rare errors captured
- distLquantile gains sanity checks

new functions: distLweight, q_weighted, plotLquantile


---------------------------------------
---------------------------------------


Version 0.6.0 (2016-12-12)
For complete log, see https://github.com/brry/extremeStat/commits/master
- several lmomco changes reflected
- several rare errors (especially with very small sample sizes) captured
- documentation updated, vignette clarified
- distLextreme truncate bug corrected (was not passed to distLfit)
- Licence made less restrictive (GPL3 changed to GPL>=2)
- q_gpd captures (and reflects on) more potential errors
- distLquantile q_gpd rownames are unified and sorted differently
- distLgofPlot gained more customization options


---------------------------------------
---------------------------------------


Version 0.5.15 (2016-05-11)
submitted to CRAN